Color difference between viewport and OpenGL render. #52812

Closed
opened 2017-09-18 12:32:37 +02:00 by Dalai Felinto · 9 comments

System Information
Radeon Pro WX 7100 on Mesa (Gallium 0.4 on AMD POLARIS10 (DRM 3.9.0 / 4.10.0-33-generic, LLVM 4.0.0))

Blender Version
Broken: 9068c0743e

Short description of error
Color difference between what I see in the viewport and what I get with OpenGL render.

Exact steps for others to reproduce the error

The results are extremely different:

ocio.png

**System Information** Radeon Pro WX 7100 on Mesa (Gallium 0.4 on AMD POLARIS10 (DRM 3.9.0 / 4.10.0-33-generic, LLVM 4.0.0)) **Blender Version** Broken: 9068c0743e08 **Short description of error** Color difference between what I see in the viewport and what I get with OpenGL render. **Exact steps for others to reproduce the error** * Open [archiviz.blend ](https://ftp.nluug.nl/ftp/graphics/blender/demo/eevee/archiviz/archiviz.blend) from the Eevee samples * Do an OpenGL render. The results are extremely different: ![ocio.png](https://archive.blender.org/developer/F810819/ocio.png)
Author
Owner

Changed status to: 'Open'

Changed status to: 'Open'
Author
Owner

Added subscriber: @dfelinto

Added subscriber: @dfelinto
Author
Owner

I reproduced this in a simpler file:
Open factory startup and set "Look: Agfa Agfacolor Futura II 20" (or any other that clearly shows up).

ocio.blend

ocio_simple.png

I reproduced this in a simpler file: Open factory startup and set "Look: Agfa Agfacolor Futura II 20" (or any other that clearly shows up). [ocio.blend](https://archive.blender.org/developer/F810933/ocio.blend) ![ocio_simple.png](https://archive.blender.org/developer/F810939/ocio_simple.png)
Author
Owner

Now for the final twist in this report:

  • If you just open the ocio.blend above and opengl render, everything seems fine.
  • If you open blender, do "Load Factory Settings" and then open the ocio.blend (or reproduce its steps from scratch), the bug is there.
Now for the final twist in this report: * If you just open the ocio.blend above and opengl render, everything seems fine. * If you open blender, do "Load Factory Settings" and then open the ocio.blend (or reproduce its steps from scratch), the bug is there.
Campbell Barton was assigned by Dalai Felinto 2017-09-18 12:56:13 +02:00
Author
Owner

Added subscribers: @Sergey, @fclem

Added subscribers: @Sergey, @fclem
Campbell Barton was unassigned by Sergey Sharybin 2017-09-18 14:56:01 +02:00
Sergey Sharybin self-assigned this 2017-09-18 14:56:01 +02:00

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Staling.

Staling.

This issue was referenced by a6b156bf57

This issue was referenced by a6b156bf57864072aa2cab8b251a8fb3b0ee7b34

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#52812
No description provided.