Color management: When look is applied, we can not consider spaces to match

This should fix T52812 after merge to blender2.8.